# claude-harness

./: CLAUDE.md  README.md  manifest.json  pyproject.toml
.claude/agents/: design-agent.md  dev-plan-agent.md  doc-agent.md  evaluator-agent.md  planner-agent.md  prd-agent.md  release-plan-agent.md  requirements-agent.md  review-agent.md  testing-plan-agent.md
.claude/commands/: design.md  dev-plan.md  doc.md  prd.md  release-plan.md  requirements.md  review.md  testing-plan.md
.claude/hooks/: hooks.json
.claude/rules/: document-naming.md  evaluator-calibration.md  iterative-refinement.md  multi-agent-separation.md  review-process.md  spec-driven-workflow.md  sprint-contract.md
docs/init/: overview.md  product-architecture.md  schedule.md  technical-architecture.md
docs/project/api/: api.md
docs/project/architecture/: architecture.md
docs/project/configuration/: configuration.md
docs/project/glossary/: glossary.md
docs/project/overview/: overview.md
docs/project/usage/: usage.md
docs/review/: design-review.md  dev-plan-review.md  prd-review.md  release-plan-review.md  requirements-review.md  testing-plan-review.md
docs/review/calibration/: requirements-calibration.md
docs/specs/: workflows.md
docs/specs/design/: 2026-04-01-harness-best-practices-design.md
docs/specs/templates/: sprint-contract.md
docs/superpowers/plans/: 2026-03-27-claude-agent-harness-implementation-plan.md
docs/superpowers/specs/: 2026-03-27-claude-agent-doc-structure-design.md
src/claude_code/bridge/: __init__.py  api.py  config.py  enabled.py  handle.py  handler.py  ide.py  messaging.py  protocol.py  recovery.py  session.py  transport.py
src/claude_code/cli/: app.py  history.py  main.py  output.py  state.py  suspend.py  vim.py
src/claude_code/commands/: __init__.py  add_dir.py  advisor.py  agents.py  base.py  branch.py  btw.py  clear.py  color.py  commit.py  config.py  context.py  copy.py  cost.py  doctor.py  effort.py  exit.py  export.py  fast.py  feedback.py  files.py  git.py  help.py  hooks.py  ide.py  init.py  loader.py  login.py  logout.py  mcp.py  memory.py  model.py  passes.py  registry.py  rename.py  resume.py  rewind.py  session.py  skills_cmd.py  stats.py  (+5 more)
src/claude_code/engine/: context.py  engine.py  error_handler.py  error_recovery.py  pipeline.py  sse_parser.py
src/claude_code/hooks/: __init__.py  app_state_store.py  change_record.py  context.py  effect.py  handler.py  manager.py  observable.py  reactive.py  registry.py  selector.py  textual_integration.py  types.py  use_settings.py
src/claude_code/models/: events.py  message.py  session.py  task.py  tool.py
src/claude_code/plugins/: __init__.py  base.py  manager.py  registry.py
tests/: test_api_claude.py  test_api_errors.py  test_bridge_ide.py  test_bridge_messaging.py  test_bridge_protocol.py  test_bridge_session.py  test_bridge_transport.py  test_cli_main.py  test_cli_output.py  test_cli_state.py  test_commands_add_dir.py  test_commands_advisor.py  test_commands_agents.py  test_commands_base.py  test_commands_btw.py  test_commands_color.py  test_commands_context.py  test_commands_copy.py  test_commands_core.py  test_commands_cost.py  test_commands_doctor.py  test_commands_effort.py  test_commands_exit.py  test_commands_export.py  test_commands_fast.py  test_commands_feedback.py  test_commands_files.py  test_commands_git.py  test_commands_hooks.py  test_commands_ide.py  test_commands_init.py  test_commands_login.py  test_commands_logout.py  test_commands_memory.py  test_commands_passes.py  test_commands_registry.py  test_commands_rename.py  test_commands_resume.py  test_commands_rewind.py  test_commands_session.py  (+54 more)
(+104 files in other folders)
