[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code"
version = "1.0.0"
description = "Claude Code - AI coding assistant with full tool access"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
keywords = ["cli", "ai", "coding", "assistant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Tools :: CLI",
]

dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "textual>=0.80.0",
    "pyyaml>=6.0",
    "bashlex>=0.9",
    "shell-quote>=1.7.3",
    "aiohttp>=3.9.0",
    "anyio>=4.0.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "platformdirs>=4.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.0",
    "types-aiohttp>=3.9.0",
    "hypothesis>=6.0.0",
    "pytest-httpserver>=1.0.0",
]

[project.scripts]
claude-code = "claude_code.main:main"

[project.urls]
Homepage = "https://claude.ai/code"
Repository = "https://github.com/anthropics/claude-code"
Documentation = "https://docs.claude.ai/code"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM102", # use if expression
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/claude_code"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
